# Water-Rendering---OpenGL

./: .gitignore  CMakeLists.txt  GenerateProject.bat  README.md
include/: camera.h
lib/glad/: Version 4.6.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: vs.vert
src/: main.cpp
